Added back and stone

--- a/Stone's_Life/MyApplication/app/src/main/res/values/strings.xml
+++ b/Stone's_Life/MyApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Stone\'s Life</string>
+    <string name="app_name">Жизнь Камня</string>
+
+    <string name="Hello">*Тяжёлый вздох*</string>
 </resources>
